--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-image: url('./images/rm-bg.jpg');
-  background-size: cover;
+  background-size: auto;
+  /* background-repeat:no-repeat; */
+  background-attachment: fixed;
 }
